+ Adequate blocks added for all elments on the page | + Spacing fixed for elements | + Invite bot block layout change

--- a/components/bot/index.module.scss
+++ b/components/bot/index.module.scss
@@ -1,41 +1,41 @@
 @use 'public/styles/mixinHelper';
 @use "public/styles/globalVariables";
 
-.container_card{
+.container_card {
   .card {
     flex-direction: row-reverse;
-    max-width: 1300px;
     margin: 0 auto;
-    padding: 0 30px;
+    padding: 2rem 10px;
+    max-width: calc(1300px - 20px);
 
-    .title_blue {
+    .title_blue h1,
+    .title_blue h3 {
       color: globalVariables.$color-2;
       font-size: 58px;
       line-height: 1.16;
       letter-spacing: -0.036em;
       font-weight: 700;
-      margin-bottom: 0.7em;
-      margin-top: 1.1em;
+      margin: 1rem 0px;
 
       @include mixinHelper.mobileResponsive{
-        font-size: 48px;
+        font-size: 40px;
       };
     }
 
-    .description_white {
+    .title_blue h3 {
+      font-size: 35px!important;
+
+      @include mixinHelper.mobileResponsive{
+        font-size: 25px!important;
+      };
+    }
+
+    .description_white p {
       color: globalVariables.$color-0;
       font-weight: 400;
       font-size: 22px;
       line-height: 36px;
-      margin-top: 1rem;
-
-      &:last-child{
-        margin-bottom: 2rem;
-
-        @include mixinHelper.mobileResponsive{
-          margin-bottom: unset;
-        }
-      }
+      margin: 1rem 0px;
     }
 
     .image_card {
@@ -53,20 +53,35 @@
   }
 }
 
-.trusted_by_2500 {
-  font-size: 58px;
+.trusted_by_2500 h2 {
+  font-size: 45px;
   color: globalVariables.$color-0;
   font-weight: bolder;
   background-color: globalVariables.$color-4;
-  margin-top: 90px;
-  margin-bottom: 50px;
+  margin: 2rem 0px;
   padding: 25px;
 
   @include mixinHelper.mobileResponsive{
-     font-size: 45px;
+     font-size: 35px;
   }
 }
 
 .link {
-  color: globalVariables.$color-3;
+  color: globalVariables.$color-8;
+}
+
+.buttonLink {
+  background-color: globalVariables.$color-8;
+  color: globalVariables.$color-4;
+
+  width: 100%;
+  max-width: 300px;
+
+  padding: 20px;
+  margin: 1rem 0px;
+
+  font-weight: bold;
+  border-radius: 5px;
+  text-transform: uppercase;
+
 }
